change placeholder image to actual image, color banner

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Design Kit</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,10 +24,10 @@
         </div>
       </div>
     </nav>
-    <main class="container my-4">
+    <main class="container-fluid banner">
       <div class="row">
         <div class="col-md-6">
-          <img src="https://via.placeholder.com/500x300" class="img-fluid" alt="Placeholder Image">
+          <img src="./assets/hand.png" class="img-fluid hand" alt="Hand holding a pencil">
         </div>
         <div class="col-md-6">
           <h1>Draw It! </h1>
