--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
         </div>
       </div>
     </nav>
-    <main class="container-fluid banner">
-      <div class="row">
+    <main class="container-fluid ">
+        <!-- banner -->
+      <header class="row banner">
         <div class="col-md-6">
           <img src="./assets/hand.png" class="img-fluid hand" alt="Hand holding a pencil">
         </div>
         <div class="col-md-6">
           <h1>Draw It! </h1>
           <p><small class="text-body-secondary">Spur deeper and different kinds of conversations by picking up pen and paper drawing.</small></p>
-    
         </div>
-      </div>
+    </header>
     </main>
     <!-- Bootstrap JS Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
