add content to aside, start section

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
       </div>
     </nav>
-    <main class="container-fluid ">
+    <main class="container-fluid bg-light">
         <!-- banner -->
       <header class="row banner">
         <div class="col-md-6">
@@ -35,6 +35,20 @@
           <p><small class="text-body-secondary">Spur deeper and different kinds of conversations by picking up pen and paper drawing.</small></p>
         </div>
     </header>
+    <!-- content -->
+    <aside class="container-fluid bg-light">
+        <div class="row my-4">
+            <div class="col-md-3 text-center">
+                <p>We’re strong believers in getting visual at IDEO.org, and drawing is a great way to learn from the people you’re designing for. Whether it’s you with the pen or them, a quick sketch, a graph, or a timeline is a fantastic way to bridge language barriers and keep a record of your research. Drawing can also help the person you’re designing for organize her thoughts visually and generally spur ideas and conversation in a different way than talking. For example, you may ask someone to draw everything they spend money on in a week, or map out all the jobs they’ve had, or show you the route they take to their job. And remember, you don’t need to be a great artist for drawing to be a highly useful tool.</p>
+            </div>
+        </div>
+    </aside>
+    <section class="container-fluid bg-light">
+        <div class="row my-4">
+            <div class="col-md-9">
+               
+            </div>
+        </div>
     </main>
     <!-- Bootstrap JS Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
