start adding steps

--- a/index.html
+++ b/index.html
@@ -36,17 +36,19 @@
         </div>
     </header>
     <!-- content -->
-    <aside class="container-fluid bg-light">
-        <div class="row my-4">
-            <div class="col-md-3 text-center">
-                <p>We’re strong believers in getting visual at IDEO.org, and drawing is a great way to learn from the people you’re designing for. Whether it’s you with the pen or them, a quick sketch, a graph, or a timeline is a fantastic way to bridge language barriers and keep a record of your research. Drawing can also help the person you’re designing for organize her thoughts visually and generally spur ideas and conversation in a different way than talking. For example, you may ask someone to draw everything they spend money on in a week, or map out all the jobs they’ve had, or show you the route they take to their job. And remember, you don’t need to be a great artist for drawing to be a highly useful tool.</p>
-            </div>
-        </div>
-    </aside>
     <section class="container-fluid bg-light">
         <div class="row my-4">
-            <div class="col-md-9">
-               
+            <div class="col-md-3 col-6 text-center">
+                <p>We’re strong believers in getting visual at IDEO.org, and drawing is a great way to learn from the people you’re designing for. Whether it’s you with the pen or them, a quick sketch, a graph, or a timeline is a fantastic way to bridge language barriers and keep a record of your research. Drawing can also help the person you’re designing for organize her thoughts visually and generally spur ideas and conversation in a different way than talking. For example, you may ask someone to draw everything they spend money on in a week, or map out all the jobs they’ve had, or show you the route they take to their job. And remember, you don’t need to be a great artist for drawing to be a highly useful tool.</p>
+            </div>
+            <div class="col-md-9 col-6">
+                <h1 class="display-5 ms-5">STEPS</h1>
+               <ol>
+                <li class="mb-3">Make sure you have pen and paper handy when talking with the people you’re designing for. Even a sheet torn out of your notebook works great. </li>
+                <li class="mb-3">When you want the person you’re designing for to draw something, give them a clear idea of what you’re after. A map of their daily route? A timeline of their annual income? What percentage of their fields are dedicated to a certain crop? </li>
+                <li class="mb-3">The person you’re designing for may feel intimidated or that she’s not a good artist. Help her over that fear. Or be the one to draw first so that she doesn’t feel embarrassed. </li>
+                <li class="mb-3">You can use the drawings as Conversation Starters. This Method can get you to a deeper understanding of the person you’re designing for so investigate what they’ve drawn.</li>
+               </ol>
             </div>
         </div>
     </main>
