--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
   </head>
-  <body>
+  <body class="bg-light">
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
@@ -24,15 +24,15 @@
         </div>
       </div>
     </nav>
-    <main class="container-fluid bg-light">
+    <main class="container-fluid ">
         <!-- banner -->
       <header class="row banner">
         <div class="col-md-6">
-          <img src="./assets/hand.png" class="img-fluid hand" alt="Hand holding a pencil">
+          <img src="./assets/hand.png" class="img-fluid hand" alt="Illustration of a hand holding a pencil">
         </div>
         <div class="col-md-6">
           <h1>Draw It! </h1>
-          <p><small class="text-body-secondary">Spur deeper and different kinds of conversations by picking up pen and paper drawing.</small></p>
+          <p><small class="text-body-secondary subtext">Spur deeper and different kinds of conversations by picking up pen and paper drawing.</small></p>
         </div>
     </header>
     <!-- content -->
@@ -42,7 +42,7 @@
                 <p>We’re strong believers in getting visual at IDEO.org, and drawing is a great way to learn from the people you’re designing for. Whether it’s you with the pen or them, a quick sketch, a graph, or a timeline is a fantastic way to bridge language barriers and keep a record of your research. Drawing can also help the person you’re designing for organize her thoughts visually and generally spur ideas and conversation in a different way than talking. For example, you may ask someone to draw everything they spend money on in a week, or map out all the jobs they’ve had, or show you the route they take to their job. And remember, you don’t need to be a great artist for drawing to be a highly useful tool.</p>
             </div>
             <div class="col-md-9 col-6">
-                <h1 class="display-5 ms-5">STEPS</h1>
+                <h2 class="display-5 mb-4 ms-5 steps">STEPS</h2>
                <ol>
                 <li class="mb-3">Make sure you have pen and paper handy when talking with the people you’re designing for. Even a sheet torn out of your notebook works great. </li>
                 <li class="mb-3">When you want the person you’re designing for to draw something, give them a clear idea of what you’re after. A map of their daily route? A timeline of their annual income? What percentage of their fields are dedicated to a certain crop? </li>
@@ -51,7 +51,12 @@
                </ol>
             </div>
         </div>
+    </section>
     </main>
+    <!-- footer -->
+    <footer class="bg-dark footer text-center py-3">
+        <p class="mb-0">Pengteda Cheng CS50B Week 3</p>
+        </footer>
     <!-- Bootstrap JS Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
   </body>
